2.5

	gof.formula and gof.ergm now set GOF=NULL by default, internally substituting to ~degree + espartners + distance or ~idegree + odegree + espartners + distance depending on the directedness of the associated network.  This fixed a long-standing bug, in which gof.ergm would fail by default when called on a digraph model.

2.4
	Added a ChangeLog.

	Non-Bernoulli-Reference ERGMs implemented.

	Commented out most functions in old InitErgm.R file; replaced them with InitErgmTerm functions.

	Removed counterintuitive "as.directed" function

	Switched all instances of heads->tails to tails->heads in R code.

	Added Ayn's tests (developed for v. 2.3) of the change statistics.

	Changed src/changestats.c to new tails->heads standard by using Ayn's v. 2.3

	Will look through svn log and fill in the other changes later.